rest API finalizada

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,19 +7,21 @@ block content
             div
                 div
                     span.label Name :
-                    input(type="text", class="nameTxt", name="username")
+                    input(type="text", class="nameTxt", name="title")
                 div
                     span.label Comment :
-                    textarea(name="comment")
+                    textarea(name="description")
                 div#addCommentSubmit
                     input(type="submit", value="Save")
-  br
-  br
-  #comments
-    - each comment in comments
-      div.comment
-        div.name= comment.username
-        div.created_at= comment.created
+  //- br
+  //- br
+  #entries
+    - each entry in entries
         br
-        div.content= comment.content
-        hr
+        div.name= entry.title
+        div.description= entry.description
+        div.created= entry.created
+        div.id= entry.id
+        br
+        //- div.content= comment.content
+        //- hr
