--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,34 @@ body {
 a {
   color: #00b7ff;
 }
+.addCommentForm {
+  width: 450px;
+}
+input[type =text] {
+  width: 200px;
+  margin-left: 38px;
+}
+textarea {
+  width: 200px;
+  margin-left: 10px;
+}
+input[type =button],
+input[type =submit] {
+  clear: both;
+  margin-left: 85px;
+  display: block;
+}
+.label {
+  text-align: right !important;
+  display: block;
+  float: left;
+}
+#comments .name {
+  float: left;
+}
+#comments .created_at {
+  float: right;
+}
+#comments .content {
+  clear: both;
+}
