--- a/views/index.jade
+++ b/views/index.jade
@@ -23,5 +23,10 @@ block content
         div.created= entry.created
         div.id= entry.id
         br
+        //-el delete deberia hacerse con un AJAX, para proximamente...se hace una Ñapa con un GET
+        form( method="get", action="/api/del/")
+          input(type='hidden', value='#{entry.id}', name="id")
+          input(type='submit', value='Delete')
+        br
         //- div.content= comment.content
         //- hr
