--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -11,18 +11,17 @@ a
   textarea
     width 200px
     margin-left 10px
-  input[type =button], input[type =submit]
+  input[type =button], input[type =submit], a#api
     clear both
-    margin-left 85px
+    margin-left 10px
+    display inline-block
+  span
     display block
   .label
       text-align right !important
       display block
       float left
-#comments
-  .name
-    float left
-  .created_at
-    float right
-  .content
-    clear both
+
+footer
+  position absolute
+  bottom 0
