--- a/views/index.jade
+++ b/views/index.jade
@@ -12,21 +12,24 @@ block content
                     span.label Comment :
                     textarea(name="description")
                 div#addCommentSubmit
-                    input(type="submit", value="Save")
+                    input(type="submit", value="Add entry")
   //- br
   //- br
   #entries
     - each entry in entries
         br
-        div.name= entry.title
-        div.description= entry.description
-        div.created= entry.created
-        div.id= entry.id
+        span Name: #{entry.title}
+        span Description: #{entry.description}
+        span Created: #{entry.created}
+        span Id: #{entry.id}
         br
         //-el delete deberia hacerse con un AJAX, para proximamente...se hace una Ñapa con un GET
-        form( method="get", action="/api/del/")
+        a#api(href='api/entries/#{entry.id}', style="display:inline-block")
+          input(type='submit', value='View API')
+        form( method="get", action="/api/del/", style="display:inline-block")
           input(type='hidden', value='#{entry.id}', name="id")
           input(type='submit', value='Delete')
         br
-        //- div.content= comment.content
-        //- hr
+
+block footer
+  blockquote #{footer}
