--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,15 @@
 doctype html
-html
+html(lang='es')
+
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+      meta(charset='utf-8')
+      meta(name='description', content='APIRest_test')
+      meta(name='keywords', content='API, rest, node, mongo, mongoose, html5, express')
+      title= title
+      link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
     block content
+
   footer
     block footer
