--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,8 @@
 body
-  padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+
+article
+  padding: 50px
 a
   color: #00B7FF
 .addCommentForm
@@ -25,3 +27,7 @@ a
 footer
   position absolute
   bottom 0
+  background black
+  color white
+  width 96%
+  padding 2%
