--- a/views/index.jade
+++ b/views/index.jade
@@ -33,5 +33,5 @@ block content
           br
 
 block footer
-  a(href='#{git}') Github project
   blockquote #{footer}
+    a(href='https://github.com/cybermarkus1/express_basic') Github project  
