--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -6,7 +6,8 @@ article
 a
   color: #00B7FF
 .addCommentForm
-    width 450px
+    width 300px
+    padding-bottom 50px
   input[type =text]
     width 200px
     margin-left 38px
