--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #f8f8ff;
 }
 article {
   padding: 50px;
@@ -8,7 +9,8 @@ a {
   color: #00b7ff;
 }
 .addCommentForm {
-  width: 450px;
+  width: 300px;
+  padding-bottom: 50px;
 }
 input[type =text] {
   width: 200px;
@@ -38,6 +40,47 @@ footer {
   bottom: 0;
   background: #000;
   color: #fff;
-  width: 100%;
-  padding: 50px;
+  width: 96%;
+  padding: 1%;
+}
+.api h1 {
+  background: #d5d5d5;
+  padding: 2%;
+  border: 1px solid #51b6ae;
+}
+.api .data {
+  width: 50%;
+  margin: auto auto;
+  padding: 8px;
+  background-color: #f7f7f9;
+  border: 1px solid #e1e1e8;
+}
+.api .bracket {
+  color: #93a1a1;
+  padding: 2%;
+}
+.api pre {
+  font-size: 13px;
+  line-height: 20px;
+  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+}
+.api .entry {
+  margin-left: 5%;
+}
+.api .entry .pln {
+  color: #d14;
+  display: inline-block;
+}
+.api .entry .str {
+  color: #000;
+  font-wieght: 600;
+  display: inline-block;
+}
+.api .options {
+  width: 50%;
+  margin: auto auto;
+  padding: 12px;
+}
+.api .options input {
+  font-size: 20px;
 }
