--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,6 @@
 body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  background ghostwhite
 
 article
   padding: 50px
@@ -32,3 +33,38 @@ footer
   color white
   width 96%
   padding 1%
+
+
+.api
+  h1
+    background #D5D5D5
+    padding 2%
+    border 1px solid rgb(81, 182, 174)
+  .data
+    width 50%
+    margin auto auto
+    padding 8px
+    background-color #f7f7f9
+    border 1px solid #e1e1e8
+  .bracket
+    color #93a1a1
+    padding 2%
+  pre
+    font-size 13px
+    line-height 20px
+    font-family Monaco,Menlo,Consolas,"Courier New",monospace;
+  .entry
+    margin-left 5%
+    .pln
+      color #D14
+      display inline-block
+    .str
+      color black
+      font-wieght 600
+      display inline-block
+  .options
+    width 50%
+    margin auto auto
+    padding 12px
+    input
+      font-size 20px
