--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,7 @@
 body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   background ghostwhite
+  margin 0
 
 article
   padding: 50px
@@ -27,11 +28,10 @@ a
       float left
 
 footer
-  position absolute
   bottom 0
   background black
   color white
-  width 96%
+  width 98%
   padding 1%
 
 
@@ -46,6 +46,7 @@ footer
     padding 8px
     background-color #f7f7f9
     border 1px solid #e1e1e8
+    margin-bottom 5%
   .bracket
     color #93a1a1
     padding 2%
@@ -53,6 +54,8 @@ footer
     font-size 13px
     line-height 20px
     font-family Monaco,Menlo,Consolas,"Courier New",monospace;
+    input,textarea
+      border none
   .entry
     margin-left 5%
     .pln
