--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,17 @@ doctype html
 html(lang='es')
 
   head
-      meta(charset='utf-8')
-      meta(name='description', content='APIRest_test')
-      meta(name='keywords', content='API, rest, node, mongo, mongoose, html5, express')
-      title= title
-      link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset='utf-8')
+    meta(name='description', content='APIRest_test')
+    meta(name='keywords', content='API, rest, node, mongo, mongoose, html5, express')
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type="text/javascript", src="/js/jquery-1.11.0.min.js")
+    script(type="text/javascript", src="/js/index.js")
 
   body
     block content
 
   footer
     block footer
+
