--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   article
     h1 #{title}
     div.addCommentForm
-          form( method="post", action="/create")
+          form( method="post", action="/api/entries")
               div
                   div
                       span.label Name :
@@ -18,20 +18,17 @@ block content
     //- br
     #entries
       - each entry in entries
-          br
-          span Name: #{entry.title}
-          span Description: #{entry.description}
-          span Created: #{entry.created}
-          span Id: #{entry.id}
-          br
-          //-el delete deberia hacerse con un AJAX, para proximamente...se hace una Ñapa con un GET
-          a#api(href='api/entries/#{entry.id}', style="display:inline-block")
-            input(type='submit', value='View API')
-          form( method="get", action="/api/del/", style="display:inline-block")
-            input(type='hidden', value='#{entry.id}', name="id")
-            input(type='submit', value='Delete')
-          br
+          .entry
+            span Name: #{entry.title}
+            span Description: #{entry.description}
+            span Created: #{entry.created}
+            span Id: #{entry.id}
+            br
+            //-el delete deberia hacerse con un AJAX, para proximamente...se hace una Ñapa con un GET
+            a#api(href='api/entries/#{entry.id}', style="display:inline-block")
+              input(type='submit', value='View API')
+            input#del(type='submit', value='Delete', data-id='#{entry.id}')
 
 block footer
   blockquote #{footer}
-    a(href='https://github.com/cybermarkus1/express_basic') Github project  
+    a(href='https://github.com/cybermarkus1/express_basic') Github project
