--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html(lang='es')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="/js/jquery-1.11.0.min.js")
-    script(type="text/javascript", src="/js/index.js")
+    script(type="text/javascript", src="/js/main.js")
 
   body
     block content
