--- a/views/api.jade
+++ b/views/api.jade
@@ -22,8 +22,8 @@ block content
 
     pre.data
       .entry
-          span.str Key (ej: title)
-          span.pln Value (ej: hello)
+          span(style="width:20%").str Key ('title')
+          span(style="width:20%;margin-right:1%").pln Value ('hello')
       .entry
           input#key.str
           input#value.pln
