--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
     //- br
     #entries
       - each entry in entries
-          .entry
+          .entry(style="padding:2%;border:1px solid #51b6ae ")
             span title: #{entry.title}
             span description: #{entry.description}
             span created: #{entry.created}
