--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,6 +75,9 @@ footer {
 .api pre input,
 .api pre textarea {
   border: none;
+  width: 20%;
+  margin-right: 1%;
+  border: 1px solid #51b6ae;
 }
 .api pre textarea {
   width: 90%;
