--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -61,6 +61,9 @@ footer
     font-family Monaco,Menlo,Consolas,"Courier New",monospace;
     input,textarea
       border none
+      width 20%
+      margin-right:1%
+      border: 1px solid #51b6ae;
     textarea
       width 90%
       height 100px
