--- a/views/api.jade
+++ b/views/api.jade
@@ -36,4 +36,5 @@ block content
 
 block footer
   blockquote #{footer}
-    a(href='https://github.com/cybermarkus1/express_basic') Github project
+    a(href='https://github.com/cybermarkus1/node_APIrest') Github project
+    a(href='https://bitbucket.org/cybermarkus1/node_apirest') Bitbucket project
