--- a/views/api.jade
+++ b/views/api.jade
@@ -37,4 +37,4 @@ block content
 block footer
   blockquote #{footer}
     a(href='https://github.com/cybermarkus1/node_APIrest') Github project
-    a(href='https://bitbucket.org/cybermarkus1/node_apirest') Bitbucket project
+    a(href='https://bitbucket.org/cybermarkus1/node_apirest', style="margin-left:2%") Bitbucket project
