--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,8 @@ html(lang='es')
     meta(name='keywords', content='API, rest, node, mongo, mongoose, html5, express')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type="text/javascript", src="/js/jquery-1.11.0.min.js")
-    script(type="text/javascript", src="/js/main.js")
+    script(type="text/javascript", src="http://code.jquery.com/jquery-1.11.0.min.js")
+    script(type="text/javascript", src="/javascripts/main.js")
 
   body
     block content
