--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,13 +6,19 @@ html(lang='es')
     meta(name='description', content='APIRest_test')
     meta(name='keywords', content='API, rest, node, mongo, mongoose, html5, express')
     title= title
+    link(rel='stylesheet', href='/stylesheets/xpressio.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type="text/javascript", src="http://code.jquery.com/jquery-1.11.0.min.js")
     script(type="text/javascript", src="/javascripts/main.js")
 
   body
+
+    a(href='https://github.com/cybermarkus1/node_APIrest')
+        img#github-banner(style='position: absolute;right: 0px;', src='https://a248.e.akamai.net/camo.github.com/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67', alt='Fork me on GitHub')
+
     block content
 
   footer
     block footer
 
+block scripts
