removing xpressio & modal

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,9 +3,7 @@ extends layout
 block content
   article
     h1 #{title}
-    ._modal(data-modal='modal1') jlkjlkj
-    .modal-overlay
-    #modal1.addCommentForm.bck.b_pink.text.color.c_white.padding_big.modal
+    .addCommentForm
           form( method="post", action="/api/entries")
               div
                   div
