removing jQuery & clean unnecessary code

--- a/views/api.jade
+++ b/views/api.jade
@@ -31,7 +31,7 @@ block content
           input#update(type="submit", value="Update entry", style="font-size:20;float:right", data-id='#{id}')
 
     .options
-      input#del(type='submit', value='Delete', data-id='#{id}')
+      input.del(type='submit', value='Delete', data-id='#{id}')
       a(href='/', style="float:right") Back
 
 block footer
