--- a/views/index.jade
+++ b/views/index.jade
@@ -22,17 +22,13 @@ block content
       - each entry in entries
           .entry(style="padding:2%;border:1px solid #51b6ae ")
             span #{entry}
-            //- span #{entry.surname}
-            //- span #{entry.age}
-            //- span #{entry.id}
             br
-            //-el delete deberia hacerse con un AJAX, para proximamente...se hace una Ñapa con un GET
 
             a#api(href='api/#{entry.id}', style="display:inline-block")
               input(type='submit', value='View JSON')
             a#api(href='api/entries/#{entry.id}', style="display:inline-block")
               input(type='submit', value='View API')
-            input#del(type='submit', value='Delete', data-id='#{entry.id}')
+            input.del(type='submit', value='Delete', data-id='#{entry.id}')
 
 block footer
   blockquote #{footer}
